# audio_converter

./: .gitignore  README.md  build-ffmpeg-android.sh  build-ffmpeg-ios.sh  build-ffmpeg-linux.sh  build-ffmpeg-macos.sh  build-ffmpeg-windows.ps1  link-verbose.err  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/cmake/: cargokit.cmake
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: audio_converter.podspec
ios/Classes/: AudioConverterAvFoundation.swift
lib/: audio_converter.dart
lib/src/: desktop_audio_converter.dart
lib/src/exceptions/: audio_converter_exception.dart
lib/src/models/: aac_encoder.dart  (+8 more)
linux/: CMakeLists.txt
macos/: audio_converter.podspec
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs
rust/src/api/: apple.rs  common.rs  debug.rs  formats.rs  mod.rs  models.rs  simple.rs  transcoder.rs
tooling/: ensure_ffmpeg_assets.sh  package_ffmpeg_assets.sh
windows/: CMakeLists.txt
(+11 files in other folders)
