[package]
name = "audio_converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ffmpeg-next = { path = "./rust-ffmpeg", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutter_rust_bridge = "=2.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
