[package]
name = "audio_converter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutter_rust_bridge = "=2.11.1"

[dependencies.ffmpeg-next]
path = "./rust-ffmpeg"
default-features = false
features = ["codec", "filter", "format", "software-resampling", "software-scaling"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
